--- a/gb/21/3/16/n12815919.md
+++ b/gb/21/3/16/n12815919.md
@@ -1,22 +1,22 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ctcgfp309/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ctcgfp309/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ctcgfp309/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ctcgfp309/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ctcgfp309/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ctcgfp309/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ctcgfp309/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ctcgfp309/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ctcgfp309/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ctcgfp309/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ctcgfp309/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ctcgfp309/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ctcgfp309/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ctcgfp309/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ctcgfp309/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ctcgfp309/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ctcgfp309/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ctcgfp309/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ctcgfp309/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ctcgfp309/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ctcgfp309/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ctcgfp309/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ctcgfp309/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ctcgfp309/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ctcgfp309/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ctcgfp309/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ctcgfp309/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ctcgfp309/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ctcgfp309/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ctcgfp309/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ctcgfp309/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ctcgfp309/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ctcgfp309/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ctcgfp309/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ctcgfp309/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ctcgfp309/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ctcgfp309/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ctcgfp309/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ctcgfp309/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ctcgfp309/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ctcgfp309/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ctcgfp309/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ctcgfp309/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ctcgfp309/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ctcgfp309/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ctcgfp309/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ctcgfp309/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xsumwp3307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【秦鹏直播】曾扇国台办134耳光 李敖之子批中共</h2>
-<a href="https://git.io/JmeZ4"><img width="600" src="https://raw.githubusercontent.com/ctcgfp309/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/ctcgfp309/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://d22owz1tif1d5u.cloudfront.net/K9nwSSZ2c"><img width="600" src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>曾狂扇国台办134耳光，李敖之子：我为父亲不值。（大纪元合成）
 </h6>
 <hr>
 	<p>【大纪元2021年03月17日讯】观众朋友大家好，今天是美东时间3月16日，星期二，欢迎收看时事天天聊，我是Sydney，王愉贺。我是秦鹏。</p>
-<p>今日焦点：李敖之子：父亲支持统一，但过世后遭打压、作品被禁，我为父亲感到不值；美日联合对<ahref="https://github.com/ctcgfp309/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>发出警告：若胁迫或侵略，将遭到反击</p>
-<p>Sydney：继重庆19岁少年王靖渝和地产大亨潘石屹的儿子潘瑞之后，又一个年轻人站出来挑战<ahref="https://github.com/ctcgfp309/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>。这一次是<ahref="https://github.com/ctcgfp309/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE.md#1">台湾</a>著名文人李敖的儿子<ahref="https://github.com/ctcgfp309/djy/blob/master/gb/tag/%E6%9D%8E%E6%88%A1.md#1">李戡</a>。</p>
+<p>今日焦点：李敖之子：父亲支持统一，但过世后遭打压、作品被禁，我为父亲感到不值；美日联合对<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>发出警告：若胁迫或侵略，将遭到反击</p>
+<p>Sydney：继重庆19岁少年王靖渝和地产大亨潘石屹的儿子潘瑞之后，又一个年轻人站出来挑战<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>。这一次是<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE.md#1">台湾</a>著名文人李敖的儿子<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E6%9D%8E%E6%88%A1.md#1">李戡</a>。</p>
 <p>秦鹏：美日外交部长和国防部长的2+2会谈中，联合对中共发出警告，搅动东亚和印太局势。此前，美国务卿布林肯和国防部长更联合投书美国媒体，点名批评中共，号召盟友反击。</p>
-<p><center><a src=""></a><a href="https://git.io/JmeZ4"><img width="600" src="https://raw.githubusercontent.com/ctcgfp309/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/ctcgfp309/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/67p3DCZVnWg" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a><center></center></center></p>
-<h2><ahref="https://github.com/ctcgfp309/djy/blob/master/gb/tag/%E6%9D%8E%E6%88%A1.md#1">李戡</a>最新采访：我为父亲不值</h2>
-<p>Sydney：<ahref="https://github.com/ctcgfp309/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE.md#1">台湾</a>的文学与政治圈“狂人”李敖，曾直接影响了海峡两岸几代人的自由民主思潮。1960、70年代时，台湾年轻一代喜欢阅读他的作品。1990年代，李敖的书飘洋过海到了中国大陆，又为中国的年轻人打开一扇窗口，让他们呼吸到自由民主的空气。</p>
+<p><center><a src=""></a><a href="https://d22owz1tif1d5u.cloudfront.net/K9nwSSZ2c"><img width="600" src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/67p3DCZVnWg" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a><center></center></center></p>
+<h2><ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E6%9D%8E%E6%88%A1.md#1">李戡</a>最新采访：我为父亲不值</h2>
+<p>Sydney：<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE.md#1">台湾</a>的文学与政治圈“狂人”李敖，曾直接影响了海峡两岸几代人的自由民主思潮。1960、70年代时，台湾年轻一代喜欢阅读他的作品。1990年代，李敖的书飘洋过海到了中国大陆，又为中国的年轻人打开一扇窗口，让他们呼吸到自由民主的空气。</p>
 <p>秦鹏：然而，此后的李敖，却逐渐从自由代言人，变成了“两岸统一”的代言人，晚年更是对中共的执政吹捧有加，导致两岸对他的批评日增，中国的自由人士更是说他是真“共产主义”的投机者。</p>
 <p>受父亲影响，李敖的儿子李戡，也在不经意之间，成了焦点人物。</p>
 <p>Sydney：高中毕业，李戡考取了台湾大学，却又放弃、报名北京大学，还出版了《李戡戡乱记》批评台湾教育。这让他一时出名，但也在很多人眼里同样落下了他在大陆跟随中共喜好讨生活的印象。</p>
-<p>秦鹏：不过，去年至今，李戡再次成为媒体关注对象，却是因为他对中共的批评。最著名的一次，是2020年1月，台湾大选结果公布之后，李戡在新浪微博上一连串写出了134个“啪”字，并@国台办 ，被认为是在暗示选举结果打脸中国国台办，随后他的微博和今日头条账号被封至今。</p>
+<p>秦鹏：不过，去年至今，李戡再次成为媒体关注对象，却是因为他对中共的批评。最著名的一次，是2020年1月，台湾大选结果公布之后，李戡在新浪微博上一连串写出了134个“啪”字，并@国台办 ，被认为是在暗示选举结果打脸中共国台办，随后他的微博和今日头条账号被封至今。</p>
 <h3>无法说服台湾人相信中共会信守承诺</h3>
 <p>Sydney：今天，也就是3月16日，BBC发表了李戡的采访，他说自己仍然支持两岸统一，但已经没办法说服台湾人相信中共当局会信守承诺。</p>
 <p>秦鹏：我们一起来看他这一次采访的主要内容。</p>
@@ -50,7 +50,7 @@
 <p>Sydney：他说：“我没法说服今天的台湾人或者台湾年轻朋友说，你们应该相信共产党，他们已经不一样了，会守信用，会遵守承诺，我做不到讲不出来。因为我自己的案例，我都知道他们不讲信用。然后他们会跟你讲出一套理由，说他们没有背弃承诺，是因为你这个不对，你那个不对，所以我们才需要改变。我过去对他们这种诡辩可能还会有一点相信，但是至少通过这个案例我100%不相信。就是说很多情况下，我觉得问题都出在共产党，不是出在被它指控的人身上。”</p>
 <p>“我觉得我的转变在于，我认清了理想跟现实是有差距的。我并没有背弃这个理想，我的改变在于看清了很多时候追求理想，现实中碰到了很多阻力是没办法改变的。”</p>
 <p>秦鹏：我觉得李戡这个年轻人在这一点上是很诚实的，他自己和父亲的例子活生生的在那里，香港被打压活生生的例子在那里，让他说共产党会遵守承诺，我觉得任何一个正常人都无法替共产党打包票。</p>
-<p>说出来，Sydney，不怕你笑话，我以前也是一个小粉红，觉得中国一定要统一，直到有一个台湾人问我“我们想统一，可是大陆一会儿镇压地主、一会儿镇压资本家，一会儿镇压老干部，一会儿镇压学生，一会儿镇压法轮功，一会儿镇压上访的，你让我们敢统一吗？”我当时也是哑口无言。我那个时候，第一次觉得我们不能盲目的站在自己的想法去看问题，要学会换位思考。</p>
+<p>说出来，Sydney，不怕你笑话，我以前也是一个小粉红，觉得中国一定要统一，直到有一个台湾人问我“我们想统一，可是大陆一会儿镇压地主、一会儿镇压资本家，一会儿镇压老干部，一会儿镇压学生，一会儿镇压法轮功，一会儿镇压上访的，你让我们敢统一吗？”我当时也是哑口无言。我那个时候，第一次觉得我们不能盲目地站在自己的想法去看问题，要学会换位思考。</p>
 <p>Sydney：其实我接触很多大陆人之后，发现很多人很喜欢台湾，也许是台湾在社会自由风气之下养成的一种人文气息。也许有些人，也希望台湾能把自由民主的一丝风气带到大陆。但的确，我身为台湾人，个人是认为统不统一不是问题，在中国共产党之下统一才是问题。</p>
 <p>就像刚刚您讲的，中共一会儿镇压香港，一会儿镇压新疆少数族裔，一会儿镇压西藏，一会儿镇压法轮功，台湾人会愿意在这样的极权政党下被统一吗？现在的台湾人非常习惯民主自由，统一之后，就担心这华人自由灯塔也得熄灭了。</p>
 <p>另外，李戡还谈到了两岸统一的可能性非常非常低。“至少在很长的一段时间里，和平统一是根本不可能的，武力统一也不可能。”认为中共的很多做法很愚蠢，比如停止购买凤梨。北京愚蠢地以为这样会让台湾人恨民进党，但是结果是越来越多的人选择了民进党，比如2020台湾大选，蔡英文得了817万票。</p>
@@ -58,7 +58,7 @@
 <p>秦鹏：今年2月份的时候，李戡因为那个采访遭到中共舆论批判，黄安等台湾艺人还主动参与了围攻。李戡于2月23日，在Facebook上发表了一个感想，强调未来他将继续在节目中揭露中共相关部门是如何整肃李敖，帮助那些因为讨厌民进党就合理化对岸许多作为的人认清现实，因为“民进党最多对你们不友善，共产党却会对你们‘抄家灭族’”。</p>
 <p>他还强调，要论支持中国统一，李敖已经身体力行做到极致，结果却换来被全面封杀的下场，何况只是讨厌民进党的一般台湾人？他认为，在共产党不改变以前，民进党保护台湾维持现状是完全必要的，“只有民进党的蛮横，才能治得了共产党的流氓”。</p>
 <h2>美日联合对中共发出警告</h2>
-<p>我们来看看<ahref="https://github.com/ctcgfp309/djy/blob/master/gb/tag/%E7%BE%8E%E4%B8%AD%E7%9B%B8%E5%85%B3.md#1">美中相关</a>的情况。</p>
+<p>我们来看看<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E7%BE%8E%E4%B8%AD%E7%9B%B8%E5%85%B3.md#1">美中相关</a>的情况。</p>
 <p>拜登上任后，美中即将要举行第一次高层会谈。周四，美国国务卿布林肯、白宫国家安全顾问苏利文，将与中国国务委员杨洁篪以及外交部长王毅，在阿拉斯加会面。引起外界瞩目。</p>
 <h3>美日2+2会谈</h3>
 <p>在会谈前夕，3月16日，布林肯和国防部长奥斯汀（Lloyd Austin）在东京参加美日2+2会谈。中国议题占了很大部分讨论。</p>
@@ -85,48 +85,42 @@
 <p>布林肯和奥斯汀在访问结束时拜会了日本首相菅义伟。菅义伟将于4月访问白宫，将成为首位与拜登会面的外国领导人。</p>
 <p>秦鹏：拜登上任迄今，华府并未大幅度修改川普政府的对华政策，包含贸易关税、科技禁令等制裁措施依然生效，也多次强烈批评中国的香港、新疆和台湾政策，包括谴责北京当局在新疆对穆斯林少数民族进行“种族灭绝”。</p>
 <p>布林肯和苏利文将于3月18日和19日在美国阿拉斯加州会晤杨洁篪和王毅，这是拜登政府上任以来美中双方的首次最高级别官员会面。这次会晤将是一次了解美中未来关系走向的机会，也是拜登政府对华政策是否真正强硬的一次检验。我们一起继续关注，也到时候，会和观众朋友们一起来分享相关的进展，和我们的观察。</p>
-<p>《<ahref="https://github.com/ctcgfp309/djy/blob/master/gb/tag/%E7%A7%A6%E9%B9%8F%E7%9B%B4%E6%92%AD.md#1">秦鹏直播</a>》制作组</p>
+<p>《<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E7%A7%A6%E9%B9%8F%E7%9B%B4%E6%92%AD.md#1">秦鹏直播</a>》制作组</p>
 <p>责任编辑：李昊#</p>
 	
 <hr>
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ctcgfp309/djy/blob/master/gb/21/3/10/n12803091.md#1">【秦鹏直播】习近平称全军备战 在恐吓谁？</a></li>
-<li><a href="https://github.com/ctcgfp309/djy/blob/master/gb/21/3/11/n12805655.md#1">【秦鹏直播】蓬佩奥连发声 呛中共“太恶毒”</a></li>
-<li><a href="https://github.com/ctcgfp309/djy/blob/master/gb/21/3/12/n12808230.md#1">【秦鹏直播】女辅警敲诈案是冤案？盘点9大疑点</a></li>
-<li><a href="https://github.com/ctcgfp309/djy/blob/master/gb/21/3/15/n12813494.md#1">【秦鹏直播】潘石屹之子疑被通缉 阿里被整顿？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/3/10/n12803091.md#1">【秦鹏直播】习近平称全军备战 在恐吓谁？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/3/11/n12805655.md#1">【秦鹏直播】蓬佩奥连发声 呛中共“太恶毒”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/3/12/n12808230.md#1">【秦鹏直播】女辅警敲诈案是冤案？盘点9大疑点</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/3/15/n12813494.md#1">【秦鹏直播】潘石屹之子疑被通缉 阿里被整顿？</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ctcgfp309/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/6/n10195043.md#1" target="_blank">袁斌：中共“苏维埃共和国”的专制实验</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/20/n10923009.md#1" target="_blank">从长春到韩国 80后美女的戏剧人生（3）</a></li><hr>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/30/n11225005.md#1" target="_blank">林辉：中共高规格接待蒙古独裁者背后的丑行</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/9/n11172449.md#1" target="_blank">法轮功神奇民间心口相传 中共杜撰1400案例</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ctcgfp309/djy/blob/master/gb/21/3/12/n12806462.md#1">美国数百人目击UFO 电视台派记者搭机调查</a></li>
-<li><a href="https://github.com/ctcgfp309/djy/blob/master/gb/21/3/14/n12810261.md#1">女童讲前世记忆：911事件在世贸大楼遇难</a></li>
-<li><a href="https://github.com/ctcgfp309/djy/blob/master/gb/21/2/26/n12777823.md#1">老翁用一计 让富家子败光了财产 结果感人</a></li>
-<li><a href="https://github.com/ctcgfp309/djy/blob/master/gb/21/3/11/n12805471.md#1">【未解之谜】里根总统?亲历鬼门关</a></li>
-<li><a href="https://github.com/ctcgfp309/djy/blob/master/gb/21/2/28/n12780478.md#1">预言试析：从大禹治水看到三峡大坝的命运？</a></li>
-<li><a href="https://github.com/ctcgfp309/djy/blob/master/gb/21/3/15/n12813443.md#1">【时事纵横】美中会谈务虚？北京现蓝日异象</a></li>
-<li><a href="https://github.com/ctcgfp309/djy/blob/master/gb/21/3/16/n12813610.md#1">【横河直播】四国疫苗抗共 缅甸中企落难谁救？</a></li>
-<li><a href="https://github.com/ctcgfp309/djy/blob/master/gb/21/3/16/n12815859.md#1">【时事纵横】美日点名中朝 奥斯卡戳中共痛点</a></li>
-<li><a href="https://github.com/ctcgfp309/djy/blob/master/gb/21/3/15/n12811393.md#1">科学家终于破解火星1800公里长怪云谜团</a></li>
-<li><a href="https://github.com/ctcgfp309/djy/blob/master/gb/21/3/15/n12812938.md#1">沈舟：美军公开声明直接警告中共领导人</a></li>
-<li><a href="https://github.com/ctcgfp309/djy/blob/master/gb/21/3/15/n12812930.md#1">北京惊现橘色天空和蓝太阳 如末日天空</a></li>
-<li><a href="https://github.com/ctcgfp309/djy/blob/master/gb/21/3/14/n12810014.md#1">吴俊宏补办婚礼面子大 台语歌坛大咖齐聚祝贺</a></li>
-<li><a href="https://github.com/ctcgfp309/djy/blob/master/gb/21/3/14/n12811023.md#1">患抑郁症身材发福遭酸 马思纯高EQ回应</a></li>
-<li><a href="https://github.com/ctcgfp309/djy/blob/master/gb/21/3/14/n12810818.md#1">杨紫着曳地长裙走红毯 裙?下露出黑色马丁靴</a></li>
-<li><a href="https://github.com/ctcgfp309/djy/blob/master/gb/21/3/14/n12810940.md#1">儿子走路撞到树直呼痛 严立婷教育方法获爆赞</a></li>
-<li><a href="https://github.com/ctcgfp309/djy/blob/master/gb/21/3/15/n12812179.md#1">林俊逸自曝气喘狂咳 下台急戴氧气筒送医</a></li>
-<li><a href="https://github.com/ctcgfp309/djy/blob/master/gb/21/3/14/n12810261.md#1">女童讲前世记忆：911事件在世贸大楼遇难</a></li>
-<li><a href="https://github.com/ctcgfp309/djy/blob/master/gb/21/3/15/n12812087.md#1">美军传奇狙击手 如何在越战中歼灭女对手？</a></li>
-<li><a href="https://github.com/ctcgfp309/djy/blob/master/gb/21/3/14/n12809857.md#1">驼背带来9大坏处！简单2招 轻松矫正驼背</a></li>
-<li><a href="https://github.com/ctcgfp309/djy/blob/master/gb/21/3/14/n12810193.md#1">人死了会发生什么事？ 网民聊得很起劲</a></li>
-<li><a href="https://github.com/ctcgfp309/djy/blob/master/gb/21/3/15/n12812244.md#1">只有25岁以下的人才听得到这种声音？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/15/n11942229.md#1">大陆原卫生高官：疫情恐再爆发 谎言将破灭</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/15/n11942675.md#1">任志强失联4天 其好友求救外媒向中共施压</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/1/2/n11764074.md#1">他们身上的毒疮 原来是夙怨</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/7/n11923201.md#1">【历史回眸】抵抗极权 最简单的方法是拒绝说谎</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/6/n11920418.md#1">线条魔术家  白描大师李公麟和五马图</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ctcgfp309/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ctcgfp309/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/3/16/n12815919.htm">【秦鹏直播】曾扇国台办134耳光 李敖之子批中共</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/3/16/n12815919.htm">【秦鹏直播】曾扇国台办134耳光 李敖之子批中共</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ctcgfp309/djy/blob/master/gb/21/3/16/n12815919.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ctcgfp309/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ctcgfp309/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ctcgfp309/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ctcgfp309/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ctcgfp309/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ctcgfp309/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ctcgfp309/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ctcgfp309/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ctcgfp309/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ctcgfp309/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ctcgfp309/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ctcgfp309/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ctcgfp309/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ctcgfp309/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ctcgfp309/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ctcgfp309/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ctcgfp309/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ctcgfp309/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ctcgfp309/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ctcgfp309/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ctcgfp309/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ctcgfp309/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ctcgfp309/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ctcgfp309/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ctcgfp309/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ctcgfp309/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ctcgfp309/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ctcgfp309/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ctcgfp309/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ctcgfp309/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ctcgfp309/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ctcgfp309/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ctcgfp309/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ctcgfp309/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ctcgfp309/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ctcgfp309/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ctcgfp309/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ctcgfp309/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ctcgfp309/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ctcgfp309/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ctcgfp309/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ctcgfp309/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ctcgfp309/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ctcgfp309/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ctcgfp309/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ctcgfp309/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ctcgfp309/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ctcgfp309/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xsumwp3307/djy/blob/master/gb/21/3/16/n12815919.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
